--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,7 +43,6 @@ body {
 }
 
 .header {
-    /* grid-row: 2 /3; */
     background-color: rgb(68, 65, 65);
     color: #fff;
 }
@@ -104,30 +103,18 @@ h2 {
     grid-row: 6/7;
 }
 
-/* 
-.flex-container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-} */
 
 .flex-container {
-    flex-direction: row;
     display: flex;
     flex-flow: row wrap;
 }
 
-
-
 .flex-container>div {
     background: transparent;
     margin: 5px;
-    /* border: 1px solid rgba(228, 226, 243, 0.7); */
     border-radius: 10px;
-    /* background-color: rgb(245, 244, 247); */
     font-size: 0.9em;
     border-top: 0 !important;
-    /* height: 100%; */
 }
 
 .flex-container>.first {
@@ -156,7 +143,6 @@ h2 {
 
 
 .footer {
-    grid-row: 8/9;
     background-color: rgb(68, 65, 65);
     color: #fff;
     font-size: 16px;
@@ -779,6 +765,16 @@ hr {
         flex-wrap: wrap;
     }
 }
+
+.shadow {
+    -webkit-box-shadow: -0px 2px 2px rgba(0, 0, 0, 0.24),
+        0px 4px 4px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: -0px 2px 2px rgba(0, 0, 0, 0.24),
+        0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: -0px 2px 2px rgba(0, 0, 0, 0.24),
+        0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 
 * {
     box-sizing: border-box;
